# adidas-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
adidas_api/: CLI.py  cli_arguments.py  configs.py  event.py  main.py  monitor.py  settings.py  smtp.py  user.py
adidas_api/users/: user1.json
tests/: test_adidas_api.py
